Reimplement check.ports using the aggregator framework. Remove the (now unused) mdcheck tool, and all references to it.